{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 9,
  "lineage": "e972555c-b0d2-3cbf-5f81-ba29d5f5402e",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60772c8b-e7d2-476a-8623-9ed386b51689/resourceGroups/networking-rg/providers/Microsoft.Network/networkSecurityGroups/network-security-group",
            "location": "uksouth",
            "name": "network-security-group",
            "resource_group_name": "networking-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kube_apiserver",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/60772c8b-e7d2-476a-8623-9ed386b51689/resourceGroups/networking-rg/providers/Microsoft.Network/networkSecurityGroups/network-security-group/securityRules/apiserver",
            "name": "apiserver",
            "network_security_group_name": "network-security-group",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "networking-rg",
            "source_address_prefix": "86.27.129.63/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.networking",
            "module.networking.data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/60772c8b-e7d2-476a-8623-9ed386b51689/resourceGroups/networking-rg/providers/Microsoft.Network/networkSecurityGroups/network-security-group/securityRules/sshrule",
            "name": "sshrule",
            "network_security_group_name": "network-security-group",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "networking-rg",
            "source_address_prefix": "86.27.129.63/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.networking",
            "module.networking.data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "control_plane_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/60772c8b-e7d2-476a-8623-9ed386b51689/resourceGroups/networking-rg/providers/Microsoft.Network/virtualNetworks/virtual-network/subnets/control-plane-subnet",
            "name": "control-plane-subnet",
            "resource_group_name": "networking-rg",
            "virtual_network_name": "virtual-network"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "worker_node_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/60772c8b-e7d2-476a-8623-9ed386b51689/resourceGroups/networking-rg/providers/Microsoft.Network/virtualNetworks/virtual-network/subnets/worker-node-subnet",
            "name": "worker-node-subnet",
            "resource_group_name": "networking-rg",
            "virtual_network_name": "virtual-network"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f54490c1-237e-455a-a5b8-95406c96d772",
            "id": "/subscriptions/60772c8b-e7d2-476a-8623-9ed386b51689/resourceGroups/networking-rg/providers/Microsoft.Network/virtualNetworks/virtual-network",
            "location": "uksouth",
            "name": "virtual-network",
            "resource_group_name": "networking-rg"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    }
  ]
}